--- a/app/tests/AndroidManifest.xml
+++ b/app/tests/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity
             android:name="com.android.car.carlauncher.TaskViewInputInterceptorTest$TestActivity"/>
         <uses-library android:name="android.test.runner"/>
+        <provider android:name="com.android.car.carlauncher.calmmode.CalmModeQCProvider"
+                  tools:node="remove"/>
     </application>
 
     <instrumentation
