--- a/appgrid/lib/AndroidManifest.xml
+++ b/appgrid/lib/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <!-- Permission to allow drag surface control to be transferred from DragEvent. -->
     <uses-permission android:name="android.permission.START_TASKS_FROM_RECENTS"/>
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
 
     <application>
 
