--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -79,14 +79,13 @@
 
     <!-- The app needs to be directBootAware so that it can reflect the correct call state
      when the system boots up. -->
-    <!-- defaultToDeviceProtectedStorage prevents app crash before boot complete if access
-     storage. -->
+    <!-- Consider "defaultToDeviceProtectedStorage" which prevents app crash before boot
+     complete if access storage, but be careful with any user sensitive data when using. -->
     <application
         android:icon="@drawable/ic_launcher_home"
         android:label="@string/app_title"
         android:theme="@style/Theme.Launcher"
         android:directBootAware="true"
-        android:defaultToDeviceProtectedStorage="true"
         android:supportsRtl="true">
         <activity
             android:name=".CarLauncher"
