Calm mode - Setting up UI
Setting up activity, fragment, styles, configs
Adding clock and date to Calm mode screen

Bug: 289412878
Bug: 289412875

Test: atest CalmModeFragmentTest

Change-Id: I641855342132511bddabd43457f685b15a6925de

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -140,11 +140,12 @@
             android:excludeFromRecents="true"
             android:exported="true"
             android:launchMode="singleInstance"
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:theme="@style/Theme.CalmMode">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
+            <meta-data android:name="distractionOptimized" android:value="true"/>
             <meta-data
                 android:name="com.android.settings.title"
                 android:resource="@string/calm_mode_title"/>
