--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -69,6 +69,10 @@
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
     <!-- Permission to create RemoteCarTaskView -->
     <uses-permission android:name="android.car.permission.MANAGE_CAR_SYSTEM_UI"/>
+    <!-- Permission to read outside temperature sensor -->
+    <uses-permission android:name="android.car.permission.CAR_EXTERIOR_ENVIRONMENT"/>
+    <!-- Permission to read hvac properties -->
+    <uses-permission android:name="android.car.permission.CONTROL_CAR_CLIMATE"/>
     <!-- To connect to media browser services in other apps, media browser clients
     that target Android 11 need to add the following in their manifest -->
     <queries>
