Calm mode - Add navigation state
Display time and distance to next destination on Calm mode screen
NavigationState change events are received through ClusterHomeManager

Fix: 289412808
Bug: 295396130

Test: atest NavigationDataTest NavigationViewModelTest

Change-Id: I10c3293e11c4a1639f52c4bfd7bb2b35427835c7

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -73,6 +73,9 @@
     <uses-permission android:name="android.car.permission.CAR_EXTERIOR_ENVIRONMENT"/>
     <!-- Permission to read hvac properties -->
     <uses-permission android:name="android.car.permission.CONTROL_CAR_CLIMATE"/>
+    <!-- Permission to read navigation state -->
+    <uses-permission android:name="android.car.permission.CAR_MONITOR_CLUSTER_NAVIGATION_STATE"/>
+
     <!-- To connect to media browser services in other apps, media browser clients
     that target Android 11 need to add the following in their manifest -->
     <queries>
