Add mechanism to notify Dock
Added DockEvents which consists of events that can be sent to the dock
to trigger a change.

Added a broadcast listener which would be used to listen to incoming
events. The receiver is added to the lib's Manifest so only explicit
intents can trigger the broadcast.

Added a helper for senders to be able to send correct DockEvents to the
receiver.

Bug: 301483111
Bug: 301482374
Test: atest CarDockLibTests
Change-Id: I4a25e9c7301d81fc772f824ef92ea9613017c574

--- a/docklib/AndroidManifest.xml
+++ b/docklib/AndroidManifest.xml
@@ -16,6 +16,21 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.android.car.docklib">
+    package="com.android.car.docklib">
 
+    <application>
+        <receiver
+            android:name=".events.DockEventsReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.car.docklib.events.LAUNCH" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.android.car.docklib.events.PIN" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.android.car.docklib.events.UNPIN" />
+            </intent-filter>
+        </receiver>
+    </application>
 </manifest>
