--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -77,15 +77,10 @@
         </intent>
     </queries>
 
-    <!-- The app needs to be directBootAware so that it can reflect the correct call state
-     when the system boots up. -->
-    <!-- Consider "defaultToDeviceProtectedStorage" which prevents app crash before boot
-     complete if access storage, but be careful with any user sensitive data when using. -->
     <application
         android:icon="@drawable/ic_launcher_home"
         android:label="@string/app_title"
         android:theme="@style/Theme.Launcher"
-        android:directBootAware="true"
         android:supportsRtl="true">
         <activity
             android:name=".CarLauncher"
@@ -142,8 +137,10 @@
             </intent-filter>
         </activity>
 
-
+        <!-- The service needs to be directBootAware so that it can reflect the correct call state
+          when the system boots up. -->
         <service android:name=".homescreen.audio.telecom.InCallServiceImpl"
+                 android:directBootAware="true"
                  android:permission="android.permission.BIND_INCALL_SERVICE"
                  android:exported="true">
             <!-- The home app does not display the in-call UI. This is handled by the
