--- a/libs/appgrid/lib/AndroidManifest.xml
+++ b/libs/appgrid/lib/AndroidManifest.xml
@@ -29,6 +29,9 @@
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
 
+    <!-- Permission to allow broadcasting events to the dock -->
+    <uses-permission android:name="com.android.car.docklib.permission.BROADCAST_SENDER" />
+
     <application>
 
         <!--TODO (b/301667893): Remove the Activities and its CarLauncher specific code, once we are
