Setup robo tests in gradle and soong builds
Bug: 318710918
Test: Manual
Change-Id: Ic6d7b6ba783ab1b7dd52bb8b2b7e0322f1c11d45

--- a/libs/appgrid/lib/build.gradle
+++ b/libs/appgrid/lib/build.gradle
@@ -49,6 +49,18 @@ android {
                 srcDir 'src/com/android/car/carlauncher/proto' // default value
             }
         }
+
+        test {
+            java.srcDirs += 'robotests/src'
+        }
+
+    }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+        }
     }
 
     compileOptions {
@@ -77,17 +89,27 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'com.android.car.ui:car-ui-lib:2.5.1'
     implementation 'com.google.guava:guava:31.0.1-jre'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation  "androidx.datastore:datastore:1.0.0"
-    implementation  "com.google.protobuf:protobuf-javalite:3.20.1"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation('com.google.protobuf:protobuf-javalite:3.25.1')
+
+    //Test dependencies
+    testImplementation files(gradle.ext.lib_car_system_stubs)
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test:core-ktx:1.5.0'
+
+    testImplementation 'org.robolectric:robolectric:4.11.1'
+
+    testImplementation "org.mockito:mockito-core:5.8.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
+
 }
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.23.4"
+        artifact = "com.google.protobuf:protoc:3.25.1"
     }
 
     // Generates the java Protobuf-lite code for the Protobufs in this project. See
