Reassign gradle sdk ver to soong only if non-empty
Bug: 318708932
Test: run gradle build from AndroidStudio
Change-Id: I75fac84a37b41578c3e5389277e7671318b9fab4

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,10 @@ buildscript {
     gradle.ext.platformSdkVersion = "34" // Change this to the most recent android API level.
 
     if (file(gradle.ext.soongBash).exists()) {
-        gradle.ext.platformSdkVersion = (gradle.ext.soongBash + " --dumpvar-mode PLATFORM_SDK_VERSION").execute().text.trim()
+        def soongPlatformSdkVersion = (gradle.ext.soongBash + " --dumpvar-mode PLATFORM_SDK_VERSION").execute().text.trim()
+        if (!soongPlatformSdkVersion.isEmpty()) {
+            gradle.ext.platformSdkVersion = soongPlatformSdkVersion
+        }
     }
 
     gradle.ext.getVersionCode = { ->
