Add pin and unpin to dock controller
- Pin and Unpin actions are handled by the ViewModel
- Id added to DockItem to identify item easily
- Refactored the Adapter and ViewHolder

Bug: 315222570
Bug: 301483072
Bug: 301482374
Test: manual, added unit tests, atest CarDockLibTests
Change-Id: Ic6ba8f8833b60d5271782c53c0e2d4bd96e3cce4

--- a/docklib/AndroidManifest.xml
+++ b/docklib/AndroidManifest.xml
@@ -17,6 +17,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.car.docklib">
+    <!-- Permission to allow Dock to launch apps -->
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS"/>
 
     <!-- Permission to allow packages to broadcast events to the dock -->
     <permission
