Remove legacy TaskView
 -Make CarLauncher always use RemoteCarTaskView.
 -Remove all the references of legacy taskview impl.

Bug: 311691047
Test: atest CarLauncherTests and manually built seahawk target.
Change-Id: I4392106712d6cc0cfc4d6cd49690d8c67c309ca3

--- a/app/tests/AndroidManifest.xml
+++ b/app/tests/AndroidManifest.xml
@@ -23,9 +23,7 @@
         android:label="@string/app_test_title"
         tools:replace="android:label">
 
-        <activity android:name="com.android.car.carlauncher.TaskViewManagerTest$TestActivity"/>
-        <activity
-            android:name="com.android.car.carlauncher.TaskViewInputInterceptorTest$TestActivity"/>
+        <activity android:name="com.android.car.carlauncher.CarLauncherViewModelTest$TestActivity"/>
         <uses-library android:name="android.test.runner"/>
         <provider android:name="com.android.car.carlauncher.calmmode.CalmModeQCProvider"
                  tools:node="remove"/>
