--- a/libs/appgrid/lib/build.gradle
+++ b/libs/appgrid/lib/build.gradle
@@ -50,7 +50,8 @@ android {
         }
 
         test {
-            java.srcDirs += 'robotests/src'
+            java.srcDirs = ['robotests/src']
+            res.srcDirs   = ['robotests/res']
         }
 
     }
