Add Gradle support to CarAppGrid-lib dependencies
 - Adds Gradle support to docklib-util.
 - Adds Gradle support to car-launcher-common.
 - Moves HiddenApiAccess package as a filegroup to be accesible to all
   libs project.
 - Lifts all the hidden api usages to HiddenApiAccess.

Fixes: 320718122
Fixes: 312718542

Test: atest CarDockUtilLibTests, CarLauncherCommonTests and Manual.
Change-Id: I39319437f27492d021b330f2ec5c173b262e1107

--- a/libs/appgrid/lib/build.gradle
+++ b/libs/appgrid/lib/build.gradle
@@ -39,7 +39,6 @@ android {
             res.srcDirs = ['res']
             java.srcDirs = ['src']
             java {
-                srcDirs += 'hidden_apis_disabled/src/com/android/car/carlauncher/hidden'
                 srcDirs += 'build/generated/source/proto/java'
             }
             kotlin {
@@ -80,18 +79,22 @@ android {
 dependencies {
     compileOnly files(gradle.ext.lib_car_system_stubs)
     compileOnly files(gradle.ext.lib_car_ui_lib_oem_apis)
+    implementation project(":libs:hidden-apis-compat:hidden-apis-disabled")
+    implementation project(":libs:car-launcher-common")
     implementation project(":libs:car-apps-common")
     implementation project(":libs:car-media-common")
     implementation project(":libs:car-ui-lib")
+    implementation project(":docklib-util")
     implementation 'androidx.core:core-ktx:1.12.0'
-    api 'androidx.annotation:annotation:1.7.0'
+    api 'androidx.annotation:annotation:1.7.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
-    implementation 'com.android.car.ui:car-ui-lib:2.5.1'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation  "androidx.datastore:datastore:1.0.0"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation('com.google.protobuf:protobuf-javalite:3.25.1')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //Test dependencies
     testImplementation files(gradle.ext.lib_car_system_stubs)
