--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,6 @@ include ':libs:car-apps-common'
 include ':libs:car-media-common'
 include ':libs:car-ui-lib'
 include ':libs:aconfig-platform-compat'
+include ':libs:hidden-apis-compat:hidden-apis-disabled'
+include ':libs:car-launcher-common'
+include ':docklib-util'
