Do not resize AppGridActivity on IME changes
Prevents the activity from resizing when the keyboard appears, as
resizing would compress the AppGridItems in the AppGridActivity.

Bug: 324907938
Bug: 295238753

Test: Manual
Change-Id: I917d4dd2532748c413904755a954c923c8c3e9a6

--- a/libs/appgrid/lib/AndroidManifest.xml
+++ b/libs/appgrid/lib/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity
             android:name="com.android.car.carlauncher.AppGridActivity"
             android:launchMode="singleInstance"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true"
             android:theme="@style/Theme.Launcher.AppGridActivity"
             android:excludeFromRecents="true">
